packages/kotlin/ttrp-frontend/src/test/resources/resolution/negative/res-001-files-nope.ttrp
// expect: TTRP-RES-001
container c target polars {
    s = load(files.nope)
}
